test/Fail/WrongDotPattern.err
WrongDotPattern.agda:12.4-8: error: [UnequalTerms]
zero != suc n of type Nat
when checking that the given dot pattern zero matches the inferred
value suc n
